# dataragon

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/: FUNDING.yml
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: ecc.rs  error.rs  lib.rs  objects.rs  serialization.rs  shamir.rs
src/: dataragon.rs  ecc.rs  error.rs  main.rs  objects.rs  serialization.rs  shamir.rs
ui/: Cargo.toml
ui/src/: main.rs
