[package]
name = "dataragon"
version = "0.0.1"
authors = ["Sergey Tolmachev <tolsi.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets = "0.12.1"
shamirsecretsharing = "0.1"
ring = "0.16.9"
structopt = "0.2.10"
rand = "0.7.0"
chacha20-poly1305-aead = "0.1.2"
base58 = "0.1.0"
rpassword = "4.0"