[package]
name = "dataragon"
version = "0.0.1"
authors = ["Sergey Tolmachev <tolsi.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets = "0.12.1"
shamirsecretsharing = "0.1"
ring = "0.16.9"
structopt = "0.2.10"
rand = "0.7.0"
chacha20-poly1305-aead = "0.1.2"
bs58 = "0.3.0"
rpassword = "4.0"
reed-solomon = "0.2.1"
sha2 = "0.8.0"
crc = "1.8.1"
bincode = "1.1.4"
serde = "1.0.100"
map_in_place = "0.1.0"