[package]
name = "dataragon-cli"
version = "0.0.1"
authors = ["Sergey Tolmachev <tolsi.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataragon = { path = "../lib", version = "0.0.1" }
structopt = "0.3.26"
heapless = "0.7.16"
itertools = "0.10.5"
rpassword = "7.2.0"
postcard="1.0.4"
bs58 = "0.5.0"
map_in_place = "0.1.0"
