[package]
name = "dataragon"
version = "0.0.1"
authors = ["Sergey Tolmachev <tolsi.ru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrets = "1.2.0"
shamirsecretsharing = "0.1.5"
ring = "0.16.20"
rand = "0.8.5"
chacha20-poly1305-aead = "0.1.2"
bs58 = "0.5.0"
rpassword = "7.2.0"
reed-solomon = "0.2.1"
sha2 = "0.10.6"
crc = "3.0.1"
serde = "1.0.163"
map_in_place = "0.1.0"
itertools = "0.10.5"
postcard="1.0.4"
heapless = "0.7.16"
as-slice = "0.2.1"
varint = { git = "https://github.com/sirkibsirkib/serde_varint" }
integer-encoding = "1.1.7"
